# Factor-Graph-Neural-Network

./: .gitignore  LICENSE  README.md  build.sh  drawres.py  generate_ldpc_dataset.sh  generate_rpgm_dataset.sh  res_ldpc_ef.txt  run_fgnn_sgd.sh  run_ldpc_ef.sh  run_ldpc_train.sh  run_phoenix.sh  run_test.sh  test_ldpc_ef.sh  train_ldpc.py  train_ldpc_ef.py  train_ldpc_residual.py  train_ldpc_residual_no_allhop.py  train_ldpc_sgd.py  train_ldpc_sp_residual.py  train_syn.py  train_syn_fixed_pw_hop.py  train_syn_hop_factor.py  train_syn_pw_factor.py
MNC/: LDPC.py  Makefile  SUMMARY  commander.p  d2s_var  gen_data.py  makecode  mkcode_var  mkcode_var_def.c  mkcode_var_str.h  r2b  r2b.c  r2b_var  r2b_var_def.c  r2b_var_usg.c  r2z  r2z.c  r2z_var  r2z_var_clr.c  r2z_var_usg.c  run.sh  run_clean.sh  s2t  s2t.c  s2t_var  s2t_var_clr.c  s2t_var_def.c  s2t_var_str.h  s2t_var_usg.c  t2r  t2r.c  t2r_var  t2y  t2y.c  t2y_var  t2y_var_clr.c  t2y_var_def.c  t2y_var_str.h  y2b  y2b.c  (+8 more)
MNC/_b/: 12  16  96
MNC/_r/: 12
MNC/_s/: 12  48
MNC/_t/: 12  16  96
MNC/_x/: 16gc  48gc  96gc
MNC/_y/: 12  16  96
MNC/_z/: 12
MNC/ansi/: Makefile  cg.c  cmatrix.c  cmatrix.h  first.c  gauss_elim.c  macopt.c  matrix.c  new_cg.c  r.c  r.h  rand.h  rand2.c  rand2.h  rand2b.c  smartall.c  smartall.h  strangeopt.c  strangeopt.h  t_cg_solve.c  term.c  test_function.c  test_mac.c  test_macII.c  test_new_cg.c  tmp.c
MNC/bnd/: Makefile  ansi  bnd.c  bnd.h  bnd_var  bnd_var_clr.c  bnd_var_def.c  bnd_var_str.h  bnd_var_usg.c  bnd_var~
MNC/codes/12.4.3.111/: A  Cn  G
MNC/codes/96.3.963/: A2  Cn
MNC/radford/: Makefile  mod2mat.c
data_generate/: generate_random_pgm.py  ldpc.py
images/: Untitled.ipynb
ldpc_codes/96.3.963/: A
lib/: __init__.py
lib/data/: __init__.py  codes.py  ldpc.py  ldpc_dataset.py  random_pgm.py  random_pgm_data.py  random_pgm_hop.py  random_pgm_nohop.py  random_pgm_pw.py  random_pgm_pw_nohop.py
lib/data/MNC/: CMakeLists.txt  MNC_py.cpp  __init__.py  makecode.c  mkcode_var_clr.c  mkcode_var_usg.c  r2b_var_clr.c  r2b_var_str.h  r2z_var_def.c  r2z_var_str.h  run_all.sh  s2t.c  s2t.cpp  t2r.c  t2r_var_clr.c  t2r_var_def.c  t2r_var_str.h  t2r_var_usg.c  t2y_var_usg.c  y2b.c  y2b_var_usg.c  zb2x.c  zb2x.cpp  zb2x.h  zb2x_var_clr.c  zb2x_var_def.c  zb2x_var_usg.c
lib/data/MNC/ansi/: cmatrix.cpp  cmatrix.h  macopt.h  mynr.h  nrutil.cpp  nrutil.h  r.cpp  r.h  ran3.h  rand.h  rand2.cpp  test.h
lib/data/MNC/bnd/: bnd.cpp  bnd.h
lib/data/MNC/codes/96.3.963/: G
lib/data/MNC/radford/: mod2mat.cpp  mod2mat.h
lib/data/MNC/xsimd/docs/source/api/: xsimd_base.rst
lib/model/mpnn/: __init__.py  ensemble.py  identity.py  mp_nn.py
lib/mpnn/: __init__.py  base_model.py  factor_mpnn.py  factor_mpnn_sp.py  mp_nn.py  mp_nn_residual.py  parallel_net.py  pooling.py  sequential.py  utils.py
utils/: __init__.py  logging.py  syn_utils.py  types.py
